<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PuTao Camera</string>
    <string name="collage_select_image">Please select %s photos </string>
    <string name="collage_button_next"> next </string>

    <string name="movie_default_zh">点击这里输入中文字幕</string>
    <string name="movie_default_en"> Click here add your subtitle </string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">上拉加载更多...</string>
    <string name="pull_to_refresh_from_bottom_release_label">松开加载更多...</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在加载...</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">松开刷新…</string>
    <string name="pull_to_refresh_refreshing_label">载入中…</string>

    <string name="device_not_supported">Device not supported</string>
    <string name="device_not_supported_message">FFmpeg is not supported on your device</string>


    <!--登录注册-->
    <string name="login_title">登录葡萄账户</string>
    <string name="mobile">手机号码</string>
    <string name="login_password">登录密码</string>
    <string name="regist_password">密码(6-18位)</string>
    <string name="login">登录</string>
    <string name="reg_user">注册新用户</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_title">注册葡萄账户</string>
    <string name="next">下一步</string>
    <string name="graph_verify">图形验证码</string>
    <string name="sms_verify">验证码</string>
    <string name="get_verify">获取验证码</string>
    <string name="cancel">取消</string>



    <string name="wechat">微信</string>
    <string name="wechat_friend_circle">微信朋友圈</string>
    <string name="share_collection">收藏</string>
    <string name="qq">QQ好友</string>
    <string name="qq_zone">QQ空间</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="copy_url">复制链接</string>


</resources>
