<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_wt_bg"
    android:orientation="vertical">

    <!--标题栏-->
    <com.sunnybear.library.view.NavigationBar
        style="@style/style_navigation_bar"
        android:background="@color/transparent"
        auto:nav_left_title="@string/cancel"
        auto:nav_left_title_color="@drawable/text_select"
        auto:nav_main_title="@string/login_title"
        auto:nav_main_title_color="@color/text_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--手机号码-->
        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.sunnybear.library.view.CleanableEditText
                android:id="@+id/et_mobile"
                style="@style/XiangjiText.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:drawableRight="@drawable/close_selector"
                android:hint="@string/mobile"
                android:inputType="phone"
                auto:maxLength="11" />
            <!--间隔线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/divider_color" />
        </LinearLayout>

        <!--登录密码-->
        <LinearLayout
            android:id="@+id/ll_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_phone"
            android:orientation="vertical">

            <com.sunnybear.library.view.CleanableEditText
                android:id="@+id/et_password"
                style="@style/XiangjiText.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@null"
                android:drawableRight="@drawable/close_selector"
                android:hint="@string/login_password"
                android:inputType="textPassword" />
            <!--间隔线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/divider_color" />
        </LinearLayout>

        <!--图形验证码-->
        <RelativeLayout
            android:id="@+id/rl_graph_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_password"
            android:visibility="gone">

            <com.sunnybear.library.view.CleanableEditText
                android:id="@+id/et_graph_verify"
                style="@style/XiangjiText.EditText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_toLeftOf="@id/image_graph_verify"
                android:background="@null"
                android:drawableRight="@drawable/close_selector"
                android:hint="@string/graph_verify"
                auto:maxLength="4" />

            <!--图形验证码-->
            <com.sunnybear.library.view.image.ImageDraweeView
                android:id="@+id/image_graph_verify"
                android:layout_width="88dp"
                android:layout_height="32dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp" />
            <!--间隔线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_below="@id/et_graph_verify"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/divider_color" />
        </RelativeLayout>

        <!--登录按钮-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_graph_verify"
            android:layout_margin="16dp"
            android:background="@drawable/btn_los_focus"
            android:clickable="false"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size_16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_marginTop="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <!--注册新用户-->
            <TextView
                android:id="@+id/tv_register"
                style="@style/style_login_text"
                android:layout_alignParentLeft="true"
                android:text="@string/reg_user" />

            <!--忘记密码-->
            <TextView
                android:id="@+id/tv_forget"
                style="@style/style_login_text"
                android:layout_alignParentRight="true"
                android:text="@string/forget_password" />
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>